[tool.poetry]
name = "zero-ai-game-tracker"
version = "0.1.0"
description = ""
authors = ["Palash <maxzeroedge@gmail.com>"]
readme = "README.md"
packages = [
    { include = "zero_ai_game_tracker", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langgraph = "^0.2.28"
ollama = "^0.3.3"
llamacpp = "^0.1.14"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_ui = 'zero_ai_game_tracker.app:run'
